fix the whitespaces in style.css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,8 +108,6 @@ main{
     width: 100%;
     height: 600px;
     background:  url('../images/hero-3.webp') no-repeat center center / cover;
-    /* Other background properties */
-
 }
 
 #cover-text{
@@ -198,7 +196,7 @@ main{
 }
 
 
-/* SERVICES PAGE  */
+/* Wllbeing PAGE  */
 .services-page{
     margin-top: 60px;
 }
@@ -251,15 +249,13 @@ main{
 }
 
 
-/* contact us page  */
+/* Contact us PAGE  */
 #signup {
     background-image:linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)), url("../images/hero.webp");
     background-size: cover;
     background-position: 75%;
     padding: 20px 10% 0 10%;
-    /* flex-grow: 1;
-    width: 100%;
-    height: 600px; */
+    flex-grow: 1;
 }
 
 #signup-form {
@@ -388,7 +384,6 @@ footer{
 
     header{
         padding:1rem;
-
     }    
     nav {
         position: relative;
@@ -413,7 +408,6 @@ footer{
         line-height: 75px;
         margin: 0 0.5rem;
     }
-    
     
     /* hero */
     #cover-text{
@@ -480,8 +474,6 @@ footer{
         align-items: center;
     }
     
-    
-
     /* footer  */
     .footer__top-section{
         flex-direction: row;
@@ -494,10 +486,7 @@ footer{
     }
   
 }
-    
-    
 
-/* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover{
         border-bottom: 1px solid #1976D2;
@@ -509,7 +498,6 @@ footer{
     .services-space{
         width: 18rem;
     }
-    
     
 }
 
